// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/post_view/MessageAttachment > should call openModal when showModal is called 1`] = `
<div>
  <div
    class="attachment attachment--pretext"
  >
    <div
      class="attachment__thumb-pretext"
    >
      <p>
        pretext
      </p>
    </div>
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container"
        style="border-left-color: #FFF;"
      >
        <a
          href="author_link"
          location="message_attachment"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="attachment author icon"
            class="attachment__author-icon"
            height="14"
            src="author_icon"
            width="14"
          />
          <span
            class="attachment__author-name"
          >
            author_name
          </span>
        </a>
        <h1
          class="attachment__title"
        >
          <a
            class="attachment__title-link"
            href="title_link"
            location="message_attachment"
            rel="noopener noreferrer"
            target="_blank"
          >
            title
          </a>
        </h1>
        <div>
          <div
            class="attachment__body"
          >
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 200px;"
              >
                <p>
                  short text
                </p>
              </div>
            </div>
            <div
              class="attachment__image-container"
            >
              <div
                class="image-loading__container attachment__image"
                style="max-width: 200px;"
              >
                <svg
                  style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                  viewBox="0 0 200 200"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </div>
              <div
                class="file-preview__button"
                style="display: none;"
              >
                <figure
                  class="image-loaded-container"
                >
                  <img
                    aria-label="file thumbnail"
                    class="attachment__image"
                    src="image_url"
                    tabindex="0"
                  />
                  <span
                    class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                  >
                    <button
                      aria-label="Copy link"
                      class="style--none size-aware-image__copy_link"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                        />
                      </svg>
                    </button>
                    <a
                      aria-label="Download"
                      class="style--none size-aware-image__download"
                      download=""
                      href="image_url"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                        />
                      </svg>
                    </a>
                  </span>
                </figure>
              </div>
            </div>
            <div
              class="attachment__footer-container"
            >
              <img
                alt="attachment footer icon"
                class="attachment__footer-icon"
                height="16"
                src="footer_icon"
                width="16"
              />
              <span>
                footer
              </span>
            </div>
          </div>
          <div
            class="attachment__thumb-container"
          >
            <div
              class="image-loading__container undefined"
              style="max-width: 200px;"
            >
              <svg
                style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                viewBox="0 0 200 200"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="file-preview__button"
              style="display: none;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail"
                  class="undefined"
                  src="thumb_url"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                >
                  <button
                    aria-label="Copy link"
                    class="style--none size-aware-image__copy_link"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                      />
                    </svg>
                  </button>
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="thumb_url"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment > should change checkOverflow state on handleHeightReceived change 1`] = `
<div>
  <div
    class="attachment attachment--pretext"
  >
    <div
      class="attachment__thumb-pretext"
    >
      <p>
        pretext
      </p>
    </div>
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container"
        style="border-left-color: #FFF;"
      >
        <a
          href="author_link"
          location="message_attachment"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="attachment author icon"
            class="attachment__author-icon"
            height="14"
            src="author_icon"
            width="14"
          />
          <span
            class="attachment__author-name"
          >
            author_name
          </span>
        </a>
        <h1
          class="attachment__title"
        >
          <a
            class="attachment__title-link"
            href="title_link"
            location="message_attachment"
            rel="noopener noreferrer"
            target="_blank"
          >
            title
          </a>
        </h1>
        <div>
          <div
            class="attachment__body"
          >
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 200px;"
              >
                <p>
                  short text
                </p>
              </div>
            </div>
            <div
              class="attachment__image-container"
            >
              <div
                class="image-loading__container attachment__image"
                style="max-width: 200px;"
              >
                <svg
                  style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                  viewBox="0 0 200 200"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </div>
              <div
                class="file-preview__button"
                style="display: none;"
              >
                <figure
                  class="image-loaded-container"
                >
                  <img
                    aria-label="file thumbnail"
                    class="attachment__image"
                    src="image_url"
                    tabindex="0"
                  />
                  <span
                    class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                  >
                    <button
                      aria-label="Copy link"
                      class="style--none size-aware-image__copy_link"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                        />
                      </svg>
                    </button>
                    <a
                      aria-label="Download"
                      class="style--none size-aware-image__download"
                      download=""
                      href="image_url"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                        />
                      </svg>
                    </a>
                  </span>
                </figure>
              </div>
            </div>
            <div
              class="attachment__footer-container"
            >
              <img
                alt="attachment footer icon"
                class="attachment__footer-icon"
                height="16"
                src="footer_icon"
                width="16"
              />
              <span>
                footer
              </span>
            </div>
          </div>
          <div
            class="attachment__thumb-container"
          >
            <div
              class="image-loading__container undefined"
              style="max-width: 200px;"
            >
              <svg
                style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                viewBox="0 0 200 200"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="file-preview__button"
              style="display: none;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail"
                  class="undefined"
                  src="thumb_url"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                >
                  <button
                    aria-label="Copy link"
                    class="style--none size-aware-image__copy_link"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                      />
                    </svg>
                  </button>
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="thumb_url"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment > should match snapshot 1`] = `
<div>
  <div
    class="attachment attachment--pretext"
  >
    <div
      class="attachment__thumb-pretext"
    >
      <p>
        pretext
      </p>
    </div>
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container"
        style="border-left-color: #FFF;"
      >
        <a
          href="author_link"
          location="message_attachment"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="attachment author icon"
            class="attachment__author-icon"
            height="14"
            src="author_icon"
            width="14"
          />
          <span
            class="attachment__author-name"
          >
            author_name
          </span>
        </a>
        <h1
          class="attachment__title"
        >
          <a
            class="attachment__title-link"
            href="title_link"
            location="message_attachment"
            rel="noopener noreferrer"
            target="_blank"
          >
            title
          </a>
        </h1>
        <div>
          <div
            class="attachment__body"
          >
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 200px;"
              >
                <p>
                  short text
                </p>
              </div>
            </div>
            <div
              class="attachment__image-container"
            >
              <div
                class="image-loading__container attachment__image"
                style="max-width: 200px;"
              >
                <svg
                  style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                  viewBox="0 0 200 200"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </div>
              <div
                class="file-preview__button"
                style="display: none;"
              >
                <figure
                  class="image-loaded-container"
                >
                  <img
                    aria-label="file thumbnail"
                    class="attachment__image"
                    src="image_url"
                    tabindex="0"
                  />
                  <span
                    class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                  >
                    <button
                      aria-label="Copy link"
                      class="style--none size-aware-image__copy_link"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                        />
                      </svg>
                    </button>
                    <a
                      aria-label="Download"
                      class="style--none size-aware-image__download"
                      download=""
                      href="image_url"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                        />
                      </svg>
                    </a>
                  </span>
                </figure>
              </div>
            </div>
            <div
              class="attachment__footer-container"
            >
              <img
                alt="attachment footer icon"
                class="attachment__footer-icon"
                height="16"
                src="footer_icon"
                width="16"
              />
              <span>
                footer
              </span>
            </div>
          </div>
          <div
            class="attachment__thumb-container"
          >
            <div
              class="image-loading__container undefined"
              style="max-width: 200px;"
            >
              <svg
                style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                viewBox="0 0 200 200"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="file-preview__button"
              style="display: none;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail"
                  class="undefined"
                  src="thumb_url"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                >
                  <button
                    aria-label="Copy link"
                    class="style--none size-aware-image__copy_link"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                      />
                    </svg>
                  </button>
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="thumb_url"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment > should match snapshot and render a field with a number value 1`] = `
<td
  class="attachment-field"
>
  <p>
    1234
  </p>
</td>
`;

exports[`components/post_view/MessageAttachment > should match snapshot when no footer is provided (even if footer_icon is provided) 1`] = `
<div>
  <div
    class="attachment attachment--pretext"
  >
    <div
      class="attachment__thumb-pretext"
    >
      <p>
        pretext
      </p>
    </div>
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container"
        style="border-left-color: #FFF;"
      >
        <a
          href="author_link"
          location="message_attachment"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="attachment author icon"
            class="attachment__author-icon"
            height="14"
            src="author_icon"
            width="14"
          />
          <span
            class="attachment__author-name"
          >
            author_name
          </span>
        </a>
        <h1
          class="attachment__title"
        >
          <a
            class="attachment__title-link"
            href="title_link"
            location="message_attachment"
            rel="noopener noreferrer"
            target="_blank"
          >
            title
          </a>
        </h1>
        <div>
          <div
            class="attachment__body"
          >
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 200px;"
              >
                <p>
                  short text
                </p>
              </div>
            </div>
            <div
              class="attachment__image-container"
            >
              <div
                class="image-loading__container attachment__image"
                style="max-width: 200px;"
              >
                <svg
                  style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                  viewBox="0 0 200 200"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </div>
              <div
                class="file-preview__button"
                style="display: none;"
              >
                <figure
                  class="image-loaded-container"
                >
                  <img
                    aria-label="file thumbnail"
                    class="attachment__image"
                    src="image_url"
                    tabindex="0"
                  />
                  <span
                    class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                  >
                    <button
                      aria-label="Copy link"
                      class="style--none size-aware-image__copy_link"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                        />
                      </svg>
                    </button>
                    <a
                      aria-label="Download"
                      class="style--none size-aware-image__download"
                      download=""
                      href="image_url"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                        />
                      </svg>
                    </a>
                  </span>
                </figure>
              </div>
            </div>
          </div>
          <div
            class="attachment__thumb-container"
          >
            <div
              class="image-loading__container undefined"
              style="max-width: 200px;"
            >
              <svg
                style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                viewBox="0 0 200 200"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="file-preview__button"
              style="display: none;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail"
                  class="undefined"
                  src="thumb_url"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                >
                  <button
                    aria-label="Copy link"
                    class="style--none size-aware-image__copy_link"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                      />
                    </svg>
                  </button>
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="thumb_url"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment > should match snapshot when the attachment has a link in the title 1`] = `
<div>
  <div
    class="attachment "
  >
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container attachment__container--undefined"
      >
        <h1
          class="attachment__title"
        >
          Do you like 
          <a
            class="theme markdown__link"
            href="https://mattermost.com"
            target="_blank"
          >
            https://mattermost.com
          </a>
          ?
        </h1>
        <div>
          <div
            class="attachment__body attachment__body--no_thumb"
          />
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment > should match snapshot when the attachment has an emoji in the title 1`] = `
<div>
  <div
    class="attachment "
  >
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container attachment__container--undefined"
      >
        <h1
          class="attachment__title"
        >
          Do you like 
          <span
            data-emoticon="pizza"
          >
            <span
              aria-label=":pizza:"
              class="emoticon"
              data-testid="postEmoji.:pizza:"
              style="background-image: url(/static/emoji/1f355.png);"
            >
              :pizza:
            </span>
          </span>
          ?
        </h1>
        <div>
          <div
            class="attachment__body attachment__body--no_thumb"
          />
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment > should match snapshot when the attachment hasn't any emojis in the title 1`] = `
<div>
  <div
    class="attachment "
  >
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container attachment__container--undefined"
      >
        <h1
          class="attachment__title"
        >
          Don't you like emojis?
        </h1>
        <div>
          <div
            class="attachment__body attachment__body--no_thumb"
          />
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment > should match snapshot when the footer is truncated 1`] = `
<div>
  <div
    class="attachment "
  >
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container attachment__container--undefined"
      >
        <h1
          class="attachment__title"
        >
          footer
        </h1>
        <div>
          <div
            class="attachment__body attachment__body--no_thumb"
          >
            <div
              class="attachment__footer-container"
            >
              <span>
                aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa…
              </span>
            </div>
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment > should match value on getFieldsTable 1`] = `
<div>
  <div
    class="attachment attachment--pretext"
  >
    <div
      class="attachment__thumb-pretext"
    >
      <p>
        pretext
      </p>
    </div>
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container"
        style="border-left-color: #FFF;"
      >
        <a
          href="author_link"
          location="message_attachment"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="attachment author icon"
            class="attachment__author-icon"
            height="14"
            src="author_icon"
            width="14"
          />
          <span
            class="attachment__author-name"
          >
            author_name
          </span>
        </a>
        <h1
          class="attachment__title"
        >
          <a
            class="attachment__title-link"
            href="title_link"
            location="message_attachment"
            rel="noopener noreferrer"
            target="_blank"
          >
            title
          </a>
        </h1>
        <div>
          <div
            class="attachment__body"
          >
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 200px;"
              >
                <p>
                  short text
                </p>
              </div>
            </div>
            <div
              class="attachment__image-container"
            >
              <div
                class="image-loading__container attachment__image"
                style="max-width: 200px;"
              >
                <svg
                  style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                  viewBox="0 0 200 200"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </div>
              <div
                class="file-preview__button"
                style="display: none;"
              >
                <figure
                  class="image-loaded-container"
                >
                  <img
                    aria-label="file thumbnail"
                    class="attachment__image"
                    src="image_url"
                    tabindex="0"
                  />
                  <span
                    class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                  >
                    <button
                      aria-label="Copy link"
                      class="style--none size-aware-image__copy_link"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                        />
                      </svg>
                    </button>
                    <a
                      aria-label="Download"
                      class="style--none size-aware-image__download"
                      download=""
                      href="image_url"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                        />
                      </svg>
                    </a>
                  </span>
                </figure>
              </div>
            </div>
            <div>
              <table
                class="attachment-fields"
              >
                <thead>
                  <tr />
                </thead>
                <tbody>
                  <tr />
                </tbody>
              </table>
              <table
                class="attachment-fields"
              >
                <thead>
                  <tr>
                    <th
                      class="attachment-field__caption"
                    >
                      title_1
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="attachment-field"
                    >
                      <p>
                        value_1
                      </p>
                    </td>
                  </tr>
                </tbody>
              </table>
              <table
                class="attachment-fields"
              >
                <thead>
                  <tr>
                    <th
                      class="attachment-field__caption"
                    >
                      title_2
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="attachment-field"
                    >
                      <p>
                        value_2
                      </p>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              class="attachment__footer-container"
            >
              <img
                alt="attachment footer icon"
                class="attachment__footer-icon"
                height="16"
                src="footer_icon"
                width="16"
              />
              <span>
                footer
              </span>
            </div>
          </div>
          <div
            class="attachment__thumb-container"
          >
            <div
              class="image-loading__container undefined"
              style="max-width: 200px;"
            >
              <svg
                style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                viewBox="0 0 200 200"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="file-preview__button"
              style="display: none;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail"
                  class="undefined"
                  src="thumb_url"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                >
                  <button
                    aria-label="Copy link"
                    class="style--none size-aware-image__copy_link"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                      />
                    </svg>
                  </button>
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="thumb_url"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment > should match value on renderPostActions 1`] = `
<div>
  <div
    class="attachment attachment--pretext"
  >
    <div
      class="attachment__thumb-pretext"
    >
      <p>
        pretext
      </p>
    </div>
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container"
        style="border-left-color: #FFF;"
      >
        <a
          href="author_link"
          location="message_attachment"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="attachment author icon"
            class="attachment__author-icon"
            height="14"
            src="author_icon"
            width="14"
          />
          <span
            class="attachment__author-name"
          >
            author_name
          </span>
        </a>
        <h1
          class="attachment__title"
        >
          <a
            class="attachment__title-link"
            href="title_link"
            location="message_attachment"
            rel="noopener noreferrer"
            target="_blank"
          >
            title
          </a>
        </h1>
        <div>
          <div
            class="attachment__body"
          >
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 200px;"
              >
                <p>
                  short text
                </p>
              </div>
            </div>
            <div
              class="attachment__image-container"
            >
              <div
                class="image-loading__container attachment__image"
                style="max-width: 200px;"
              >
                <svg
                  style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                  viewBox="0 0 200 200"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </div>
              <div
                class="file-preview__button"
                style="display: none;"
              >
                <figure
                  class="image-loaded-container"
                >
                  <img
                    aria-label="file thumbnail"
                    class="attachment__image"
                    src="image_url"
                    tabindex="0"
                  />
                  <span
                    class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                  >
                    <button
                      aria-label="Copy link"
                      class="style--none size-aware-image__copy_link"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                        />
                      </svg>
                    </button>
                    <a
                      aria-label="Download"
                      class="style--none size-aware-image__download"
                      download=""
                      href="image_url"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                        />
                      </svg>
                    </a>
                  </span>
                </figure>
              </div>
            </div>
            <div
              class="attachment__footer-container"
            >
              <img
                alt="attachment footer icon"
                class="attachment__footer-icon"
                height="16"
                src="footer_icon"
                width="16"
              />
              <span>
                footer
              </span>
            </div>
            <div
              class="attachment-actions"
            >
              <button
                class="sc-ezGUFx kcEMuz btn btn-sm"
                data-action-id="action_id_1"
              >
                action_name_1
              </button>
              <button
                class="sc-ezGUFx kcEMuz btn btn-sm"
                data-action-id="action_id_2"
              >
                action_name_2
              </button>
              <div
                class="form-group"
                data-testid="autoCompleteSelector"
              >
                <div
                  class="post-attachment-dropdown"
                >
                  <div
                    class="select-suggestion-container"
                  >
                    <div
                      class="input-wrapper"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="suggestionList"
                        aria-expanded="false"
                        autocomplete="off"
                        class="form-control"
                        placeholder="action_name_3"
                        role="combobox"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="attachment__thumb-container"
          >
            <div
              class="image-loading__container undefined"
              style="max-width: 200px;"
            >
              <svg
                style="max-height: 200px; max-width: 200px; vertical-align: middle;"
                viewBox="0 0 200 200"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <div
              class="file-preview__button"
              style="display: none;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail"
                  class="undefined"
                  src="thumb_url"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                >
                  <button
                    aria-label="Copy link"
                    class="style--none size-aware-image__copy_link"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                      />
                    </svg>
                  </button>
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="thumb_url"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment > should not render content box if there is no content 1`] = `
<div
  class="attachment attachment--pretext"
>
  <div
    class="attachment__thumb-pretext"
  >
    <p>
      This is a pretext.
    </p>
  </div>
</div>
`;

exports[`components/post_view/MessageAttachment > should use ExternalImage for images 1`] = `
<div>
  <div
    class="attachment "
  >
    <div
      class="attachment__content"
    >
      <div
        class="clearfix attachment__container attachment__container--undefined"
      >
        <img
          alt="attachment author icon"
          class="attachment__author-icon"
          height="14"
          src="http://example.com/author.png"
          width="14"
        />
        <div>
          <div
            class="attachment__body"
          >
            <div
              class="attachment__image-container"
            >
              <div
                class="file-preview__button"
                style="display: inline-block;"
              >
                <figure
                  class="image-loaded-container"
                >
                  <img
                    aria-label="file thumbnail"
                    class="attachment__image"
                    src="http://example.com/image.png"
                    tabindex="0"
                  />
                  <span
                    class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                  >
                    <button
                      aria-label="Copy link"
                      class="style--none size-aware-image__copy_link"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                        />
                      </svg>
                    </button>
                    <a
                      aria-label="Download"
                      class="style--none size-aware-image__download"
                      download=""
                      href="http://example.com/image.png"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="style--none"
                        fill="currentColor"
                        height="20"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                        />
                      </svg>
                    </a>
                  </span>
                </figure>
              </div>
            </div>
            <div
              class="attachment__footer-container"
            >
              <img
                alt="attachment footer icon"
                class="attachment__footer-icon"
                height="16"
                src="http://example.com/footer.png"
                width="16"
              />
              <span>
                footer
              </span>
            </div>
          </div>
          <div
            class="attachment__thumb-container"
          >
            <div
              class="file-preview__button"
              style="display: inline-block;"
            >
              <figure
                class="image-loaded-container"
              >
                <img
                  aria-label="file thumbnail"
                  class="undefined"
                  src="http://example.com/thumb.png"
                  tabindex="0"
                />
                <span
                  class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
                >
                  <button
                    aria-label="Copy link"
                    class="style--none size-aware-image__copy_link"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
                      />
                    </svg>
                  </button>
                  <a
                    aria-label="Download"
                    class="style--none size-aware-image__download"
                    download=""
                    href="http://example.com/thumb.png"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <svg
                      class="style--none"
                      fill="currentColor"
                      height="20"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                      />
                    </svg>
                  </a>
                </span>
              </figure>
            </div>
          </div>
          <div
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
